--- a/src/app/components/home/UI/pages/list-home/list-home.component.scss
+++ b/src/app/components/home/UI/pages/list-home/list-home.component.scss
@@ -14,3 +14,13 @@
 .text-bold {
     font-weight: bold;
 }
+
+.adaptability {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+}
+
+.item {
+    margin-left: 4%;
+}
